# Innoteam

./: .env  .replit  README.md  config.py  main.py  pyproject.toml  replit.nix  requirements.txt  run.py  setup.sh  tasks.py
.github/workflows/: ci-cd.yml
app/: __init__.py
app/api/: routes.py
app/auth/: routes.py
app/core/: __init__.py  routes.py
app/models/: user.py
app/utils/: website_generator.py
config/: agents.json
main-files/documentation/: index.html
main-files/template/: index.html
main-files/template/assets/css/: dark-theme.css  pace.min.css  style.css
main-files/template/assets/js/: cookies-theme-switcher.js  index.js  loader.js  main.js  price-slider.js  product-details.js
main-files/template/synrok/: about-us.html  addresses.html  authentication-change-password.html  authentication-log-in.html  authentication-otp-varification.html  authentication-sign-up.html  authentication-splash-2.html  authentication-splash.html  cart.html  category-grid.html  category-list.html  checkout.html  contact-us.html  home.html  index.html  my-orders.html  my-profile.html  notification.html  order-tracking.html  payment-completed.html  payment-error.html  payment-method.html  product-details.html  profile.html  reviews-and-ratings.html  shop.html  wishlist.html  write-a-review.html
main-files/template/synrok/assets/css/: dark-theme.css  style.css
main-files/template/synrok/assets/js/: main.js  show-hide-password.js
templates/: index.html
tools/: browser_tools.py  file_tools.py  search_tools.py  template_tools.py
