[tool.poetry]
name = "innoteam"
version = "0.1.0"
description = "Modern website generator using AI agents"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
crewai = "^0.11.0"
langchain = "^0.1.0"
flask = "^3.0.0"
playwright = "^1.41.0"
unstructured = "^0.10.30"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
